cmake_minimum_required(VERSION 3.6)
project(C__)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
    Ch01/include/Sales_item.h
    Ch01/exercise1.1.cc
    Ch01/exercise1.10.cc
    Ch01/exercise1.11.cc
    Ch01/exercise1.19.cc
    Ch01/exercise1.20.cc
    Ch01/exercise1.21.cc
    Ch01/exercise1.22.cc
    Ch01/exercise1.23.cc
    Ch01/exercise1.3.cc
    Ch01/exercise1.4.cc
    Ch01/exercise1.6.cc
    Ch01/exercise1.8.cc
    Ch01/exercise1.9.cc
    Ch01/README.md
    Ch02/exercise2.17.cc
    Ch02/exercise2.18.cc
    Ch02/exercise2.20.cc
    Ch02/exercise2.34.cc
    Ch02/exercise2.35.cc
    Ch02/exercise2.39.cc
    Ch02/exercise2.4.cc
    Ch02/exercise2.41_1.cc
    Ch02/exercise2.41_2.cc
    Ch02/exercise2.41_3.cc
    Ch02/exercise2.42_1.cc
    Ch02/exercise2.42_2.cc
    Ch02/exercise2.42_3.cc
    Ch02/exercise2.7.cc
    Ch02/exercise2.8.cc
    Ch02/exercise2.9.cc
    Ch02/README.md
    Ch02/Sales_data.h
    Ch03/exercise3.10.cc
    Ch03/exercise3.11.cc
    Ch03/exercise3.14.cc
    Ch03/exercise3.15.cc
    Ch03/exercise3.16.cc
    Ch03/exercise3.17.cc
    Ch03/exercise3.1_1.cc
    Ch03/exercise3.1_2.cc
    Ch03/exercise3.2.cc
    Ch03/exercise3.20_1.cc
    Ch03/exercise3.20_2.cc
    Ch03/exercise3.21.cc
    Ch03/exercise3.22.cc
    Ch03/exercise3.23.cc
    Ch03/exercise3.24.cc
    Ch03/exercise3.25.cc
    Ch03/exercise3.31.cc
    Ch03/exercise3.32.cc
    Ch03/exercise3.35.cc
    Ch03/exercise3.36.cc
    Ch03/exercise3.39.cc
    Ch03/exercise3.4.cc
    Ch03/exercise3.40.cc
    Ch03/exercise3.41.cc
    Ch03/exercise3.42.cc
    Ch03/exercise3.43.cc
    Ch03/exercise3.44.cc
    Ch03/exercise3.45.cc
    Ch03/exercise3.5.cc
    Ch03/exercise3.6.cc
    Ch03/exercise3.7.cc
    Ch03/exercise3.8.cc
    Ch03/exercise3.9.cc
    Ch03/README.md
    Ch04/exercise4.10.cc
    Ch04/exercise4.11.cc
    Ch04/exercise4.21.cc
    Ch04/exercise4.22.cc
    Ch04/exercise4.6.cc
    Ch04/README.md
    Ch05/exercise5.10.cc
    Ch05/exercise5.11.cc
    Ch05/exercise5.12.cc
    Ch05/exercise5.14.cc
    Ch05/exercise5.20.cc
    Ch05/exercise5.21.cc
    Ch05/exercise5.24.cc
    Ch05/exercise5.25.cc
    Ch05/exercise5.3.cc
    Ch05/exercise5.5.cc
    Ch05/exercise5.6.cc
    Ch05/exercise5.9.cc
    Ch05/in.text
    Ch06/exercise6.3.cc
    Ch06/exercise6.5.cc
    Ch06/README.md
    Ch07/exercise7.11.cpp
    Ch07/exercise7.11.hpp
    Ch07/exercise7.2.hpp
    Ch07/README.md
    Ch08/exercise8.2.cpp
    Ch08/README.md
    README.md)

add_executable(C__ ${SOURCE_FILES})